<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@drawable/background">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_title"
                android:id="@+id/sgLoginText"
                android:gravity="center_horizontal"
                android:textSize="50dp"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:baselineAligned="true">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical|left"
                        android:id="@+id/imageView2"
                        android:src="@drawable/user_icon" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/userLoginText"
                        android:contentDescription="@string/descriptor_login_user"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_grey"
                        android:gravity="left|center_vertical"
                        android:drawableBottom="@color/light_grey"
                        android:paddingLeft="30dip"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/login_user_placeholder" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical|left"
                        android:id="@+id/imageView3"
                        android:src="@drawable/pass_icon" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/passLoginText"
                        android:contentDescription="@string/descriptor_login_pass"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_grey"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="30dip"
                        android:hint="@string/login_pass_placeholder" />

                </LinearLayout>

                    <Button
                        style="@style/loginButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_button"
                        android:textColor="@color/white"
                        android:id="@+id/login_button"
                        android:contentDescription="@string/descriptor_login_button"
                        android:layout_marginTop="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:textSize="24dp" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBarLogin"
                    android:layout_marginTop="10dp"
                    android:visibility="invisible"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="www.solidgear.es"
            android:id="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>