<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <include
        android:id="@+id/toolbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <FrameLayout
        style="@style/socialNetworksFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_networks_thanks"
                android:textSize="26dp"
                android:textStyle="bold"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginTop="10dp"
                android:text="@string/social_networks_survey_completed"
                android:textIsSelectable="false" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView4"
                android:layout_marginTop="10dp"
                android:src="@drawable/coin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_networks_discount"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:id="@+id/textView4" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        style="@style/socialNetworksFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_networks_share"
                android:id="@+id/textView5" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

            </TableRow>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <es.academy.solidgear.surveyx.ui.views.CustomButton
            style="@style/surveyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="Finish"
            android:textAllCaps="false"
            android:id="@+id/finishButton"
            android:contentDescription="@string/descriptor_survey_cancel_button"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
